# ComfyUI-Flux-Inpainting

./: README.md  nodes.py  pyproject.toml  requirements.txt
config/vae/: config.json
modules/: autoencoder_kl.py  load_util.py  model_loading_utils.py  modeling_utils.py  pipeline_flux_fill.py  transformer_override.py
modules/quantizers/: base.py  quantization_config.py
modules/quantizers/bitsandbytes/: bnb_quantizer.py  utils.py
workflow/: FluxGuffInpainting.json  FluxSimpleInpainting.json  FluxTransformerInpainting.json  inpainting.json  outpainting.json
