[project]
name = "comfyui-flux-inpainting"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/rubi-du/ComfyUI-Flux-Inpainting.git"
#  Used by Comfy Registry https://comfyregistry.org

dependencies = ["numpy", "diffusers", "transformers", "bitsandbytes"]

[tool.comfy]
PublisherId = "duhaifeng"
DisplayName = "ComfyUI-Flux-Inpainting"
Icon = ""
