[project]
name = "comfyui-flux-inpainting"
description = "This node wraps the flux fill model as ComfyUI nodes. Use NF4 flux fill model, support for inpainting and outpainting image. Compared to the flux fill dev model, these nodes can use the flux fill model to perform inpainting and outpainting work under lower VRM conditions"
version = "1.2.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/rubi-du/ComfyUI-Flux-Inpainting.git"
#  Used by Comfy Registry https://comfyregistry.org

dependencies = ["numpy", "diffusers", "transformers", "bitsandbytes"]

[tool.comfy]
PublisherId = "duhaifeng"
DisplayName = "ComfyUI-Flux-Inpainting"
Icon = ""
